@@ -522,8 +522,8 @@ WIDGET_DEFAULT = {
         "bkg_color_early": "#666666",
         "font_color_laps": "#DDDDDD",
         "bkg_color_laps": "#333333",
-        "font_color_mins": "#DDDDDD",
-        "bkg_color_mins": "#333333",
+        "font_color_minutes": "#DDDDDD",
+        "bkg_color_minutes": "#333333",
         "font_color_save": "#DDDDDD",
         "bkg_color_save": "#666666",
         "font_color_pits": "#DDDDDD",
@@ -547,7 +547,7 @@ WIDGET_DEFAULT = {
         "decimal_places_delta": 2,
         "decimal_places_early": 2,
         "decimal_places_laps": 1,
-        "decimal_places_mins": 1,
+        "decimal_places_minutes": 1,
         "decimal_places_save": 2,
         "decimal_places_pits": 2,
         "show_caption": True,
@@ -560,7 +560,7 @@ WIDGET_DEFAULT = {
         "caption_text_delta": "delta",
         "caption_text_early": "early",
         "caption_text_laps": "laps",
-        "caption_text_mins": "mins",
+        "caption_text_minutes": "mins",
         "caption_text_save": "save",
         "caption_text_pits": "pits",
     },
@@ -1662,13 +1662,13 @@ WIDGET_DEFAULT = {
         "show_lifespan_laps": True,
         "font_color_lifespan_laps": "#CCCC22",
         "bkg_color_lifespan_laps": "#222222",
-        "show_lifespan_mins": False,
-        "font_color_lifespan_mins": "#66CCCC",
-        "bkg_color_lifespan_mins": "#222222",
+        "show_lifespan_minutes": False,
+        "font_color_lifespan_minutes": "#66CCCC",
+        "bkg_color_lifespan_minutes": "#222222",
         "warning_threshold_remaining": 30,
         "warning_threshold_wear": 3,
         "warning_threshold_laps": 5,
-        "warning_threshold_mins": 6,
+        "warning_threshold_minutes": 6,
         "font_color_warning": "#FF2200",
         "show_caption": True,
         "font_color_caption": "#CCCCCC",
@@ -1676,7 +1676,7 @@ WIDGET_DEFAULT = {
         "column_index_remaining": 1,
         "column_index_wear_difference": 2,
         "column_index_lifespan_laps": 3,
-        "column_index_lifespan_mins": 4,
+        "column_index_lifespan_minutes": 4,
     },
     "weather": {
         "enable": True,
